# uppsala-rust-demo

./: LICENSE  README.md
huggingface-example/: .gitignore  Cargo.toml  README.md  build.rs  requirements.txt
huggingface-example/src/: main.rs  metal.rs
huggingface-whisper-py-rust/: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  build.rs  huggingface.py
huggingface-whisper-py-rust/src/: main.rs
kalosm-rag/: .gitignore  Cargo.toml
kalosm-rag/src/: main.rs
rdf-viz/: Cargo.toml  README.md
rdf-viz/examples/: sample.rdf
rdf-viz/src/: main.rs
rdf-viz/src/graph/: mod.rs
rdf-viz/src/rdf/: mod.rs
rdf-viz/src/visualization/: mod.rs
