[package]
name = "kalosm-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
kalosm = { version = "0.4.0", features = ["language"] }
tokio = { version = "1.45.0", features = ["full"] }

[build]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-feature=-avx,-avx2"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
objc = "0.2.7"
block = "0.1.6"
core-graphics-types = "0.1.2"